# s-locus-finder-reporter-backend

./: LICENSE  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py
s_locus_finder_reporter_backend/: DatabaseMonitor.py  app.py  serve.py
s_locus_finder_reporter_backend/mapper/: SLFDatabaseMapper.py
