[metadata]
name = s-locus-finder-reporter-backend
version = 0.1.dev16
author = Alejandro G칩mez Gonz치lez, Hugo L칩pez-Fern치ndez, Miguel Reboiro-Jato, Cristina Vieira, Jorge Vieira
author_email = alexgomezpadrenda@gmail.com
description = Backend for S-Locus Finder web reports.
keywords = s-locus, report
license = MIT License
long_description = file: README.md
long_description_content_type = text/markdown
url = https://dev.sing-group.org/gitlab/ibmc-meg/s-locus-finder-reporter-backend
classifiers =
  Programming Language :: Python :: 3.7
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Development Status :: 3 - Alpha
  Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
zip_safe = False
dependency_links = https://maven.sing-group.org/repository/python-snapshots/simple
install_requires =
  s-locus-finder-reporter==0.1.dev30
  Flask==2.0.3
  Flask-Compress==1.12
  flask-cors==3.0.10
  newick==1.3.2
  waitress==2.1.2
  watchdog==2.1.9
  requests==2.27.1

[options.entry_points]
console_scripts =
  slf-explorer = s_locus_finder_reporter_backend.serve:serve_app

[options.package_data]
s_locus_finder_reporter_backend = [py.typed, *.pyi]

[options.extras_require]
dev =
  twine==3.4.1
  build==0.7.0
  setuptools==60.9.3
  wheel==0.37.1
  pyroma==3.2
  mypy==0.931
